@@ -311,6 +311,7 @@ Rectangle {
         experimental.confirmDialog: ConfirmDialog { }
         experimental.promptDialog: PromptDialog { }
         experimental.authenticationDialog: AuthenticationDialog { }
+        experimental.proxyAuthenticationDialog: ProxyAuthenticationDialog { }
     }
 
     ViewportInfoItem {
